syntax = "proto3";

package c2;

import "mission.proto";

message Task {
  string id = 1;
  string mission_id = 2;
  string tenant_id = 3;
  string title = 4;
  TaskStatus status = 5;
  OperationalPriority priority = 6;
  SecurityClassification classification = 7;
  uint64 created_at_ms = 8;
  uint64 updated_at_ms = 9;
}

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_IN_PROGRESS = 2;
  TASK_STATUS_BLOCKED = 3;
  TASK_STATUS_COMPLETED = 4;
  TASK_STATUS_CANCELLED = 5;
}
